add -h option to show usage

--- a/xhsr.1
+++ b/xhsr.1
@@ -1,13 +1,15 @@
-.Dd December 02, 2022
+.Dd January 12, 2023
 .Dt XHSR 1
 .Sh NAME
 .Nm xhsr
 .Nd print the id of the root window of the screen on which the mouse cursor is
 .Sh SYNOPSIS
 .Nm
-.Op Fl v
+.Op Fl hv
 .Sh OPTIONS
 .Bl -tag -width indent
+.It Fl h
+show usage
 .It Fl v
 display the program version
 .El
